@@ -20,7 +20,6 @@
 
 package net.sourceforge.atunes.kernel.modules.context.artist;
 
-import java.awt.Image;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -59,7 +58,8 @@ public class ArtistAlbumListImagesDataSource implements IContextInformationSourc
         this.covers = new HashMap<IAlbumInfo, ImageIcon>();
         if (albumList != null && !albumList.getAlbums().isEmpty()) {
             for (IAlbumInfo album : albumList.getAlbums()) {
-                covers.put(album, ImageUtils.scaleImageBicubic(getAlbumImageData(album), Constants.CONTEXT_IMAGE_WIDTH, Constants.CONTEXT_IMAGE_HEIGHT));
+            	ImageIcon albumImage = getAlbumImageData(album);
+                covers.put(album, ImageUtils.resize(albumImage, Constants.THUMB_IMAGE_WIDTH, Constants.THUMB_IMAGE_HEIGHT));
             }
         }
     }
@@ -97,7 +97,7 @@ public class ArtistAlbumListImagesDataSource implements IContextInformationSourc
      * @param album
      * @return
      */
-    private Image getAlbumImageData(IAlbumInfo album) {
+    private ImageIcon getAlbumImageData(IAlbumInfo album) {
         return webServicesHandler.getAlbumThumbImage(album);
     }
     
