@@ -52,8 +52,8 @@ public class YoutubeResultsTableCellRendererCode extends ContextTableRowPanel<Yo
         								StringUtils.getString("<html>", value.getName(), "<br>(", value.getDuration(), ")</html>"), 
         								superComponent.getBackground(), 
         								superComponent.getForeground(), 
-        								Constants.CONTEXT_IMAGE_WIDTH, 
-        								Constants.CONTEXT_IMAGE_HEIGHT, 
+        								Constants.THUMB_IMAGE_WIDTH, 
+        								Constants.THUMB_IMAGE_HEIGHT, 
         								hasFocus);
     }
 	
